Home praticamente feita
Home bem adiantada, faltando customização e ligação do botão com a pagina login

--- a/front/src/style/Assessments.css
+++ b/front/src/style/Assessments.css
@@ -1,4 +1,17 @@
 div{
-    width: 100%;
-    height: 300px;
+    align-items: normal;
+    width:90rem;
+    height:auto;
+}
+.barrasup{
+    width: 90rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+img{
+    width: 4rem;
+}
+button{
+    height: 4rem;
 }
