--- a/front/src/style/Carosel.css
+++ b/front/src/style/Carosel.css
@@ -2,15 +2,16 @@
 
 /* Ajusta o tamanho do carrossel */
 .slick-slider {
-    width: auto;
+    width: 100%;
     height: auto; /* Defina a largura desejada, por exemplo, 80% */
-    margin: auto; /* Centraliza o carrossel horizontalmente */
+    margin: 20px; /* Centraliza o carrossel horizontalmente */
   }
   
   /* Opcional: Ajusta o tamanho das imagens nos slides */
   .slick-slider img {
-    width: auto; /* Faz com que as imagens ocupem 100% da largura do slide */
-    height: auto;
-    max-width: 100%;
+    width: 18rem; /* Faz com que as imagens ocupem 100% da largura do slide */
+    height: 14.4rem;
+    margin: 2rem;
+    max-width: auto;
     max-height: auto; /* Mantém a proporção original da imagem */
   }
