Mudanças basicas nos layouts
Mudanças nos layouts de login, register e home, e remoção de arquivos inúteis.

--- a/front/src/style/Carosel.css
+++ b/front/src/style/Carosel.css
@@ -2,7 +2,7 @@
 
 /* Ajusta o tamanho do carrossel */
 .slick-slider {
-    width: 100%;
+    width: auto;
     height: auto; /* Defina a largura desejada, por exemplo, 80% */
     margin: 20px; /* Centraliza o carrossel horizontalmente */
   }
