--- a/front/src/index.css
+++ b/front/src/index.css
@@ -12,6 +12,11 @@
   -webkit-text-size-adjust: 100%;
 }
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 button {
   border-radius: 8px;
   border: 1px solid transparent;
