--- a/front/src/style/Assessments.css
+++ b/front/src/style/Assessments.css
@@ -1,25 +1,51 @@
 .lateral{
     display: flex;
+    height: 39rem;
+    padding: 2rem;
+    width: 20%;
     flex-direction: column;
+    border-radius: 15px;
+    background-color: rgb(88, 88, 88);
     align-items: center;
+    border: 3px solid rgb(32, 31, 31);
+    box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, 0.3);
 }
 .total{
-    width: 90rem;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction:row;
 }
+.lateral h2{
+    padding: 0.5rem;
+    width: 100%;
+    text-align: center;
+    margin-top: 1rem;
+    border-radius: 10px;
+    text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
+    margin-bottom: 1rem;
+    background-color: rgb(68, 68, 68);
+}
+.lateral h3{
+    font-size: 8rem;
+    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+}
 .imgbaner{
+    border-radius: 10px;
     width: 14rem;
     height: 21rem;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
 .imglike{
     width: 10rem;
     height: 10rem;
 }
 .caroselhor{
+    margin-top: 3rem;
+    box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, 0.3);
     margin-left: 1rem;
     align-self: baseline;
     width: 74rem;
-    height: 37rem;
+    height: 100%;
     max-height: none;
 }
