--- a/front/src/style/Avaliation.css
+++ b/front/src/style/Avaliation.css
@@ -1,27 +1,48 @@
 .corpoava{
+    margin-top: 12rem;
     display: flex;
     align-items: center;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+    padding: 2rem;
+    border-radius: 15px;
 }
 .corpoava img{
     width: 14rem;
+    border-radius: 15px;
     height: 21rem;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+}
+.corpoava h2{
+    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+    margin-top: 0.5rem;
+    text-align: center;
 }
 .corpoava textarea{
+    padding: 1rem;
+    border-radius: 10px;
     margin-left: 2rem;
     font-size:x-large;
     height: 15rem;
     width:  30rem;
 }
 .corpoava button{
-    margin-top: 1rem;
+    margin-top: 0;
     align-self: end;
 }
 .corpoava select{
+    border-radius: 5px;
+    margin-top: 1rem;
     align-self: start;
-    font-size: medium;
-    margin-left: 2rem;
+    font-size: 3rem;
+    margin-left: 3rem;
 }
 .avaliação{
     display: flex;
     flex-direction: column;
+}
+.divbot{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
 }
