--- a/front/src/style/Description.css
+++ b/front/src/style/Description.css
@@ -1,12 +1,34 @@
+body{background-color: rgb(40, 39, 39);}
+
+.fundo{
+    width: 35%;
+    height: auto;
+    display: flex;
+    border-radius: 25px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+}
 .cartaz {
-    width: 90rem;
+    padding-top: 2rem;
+    margin-top: 2rem;
+    width: 100%;
+    border-radius: 15px;
     height: 40rem;
     height: 30rem;
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column-reverse;
+    padding-bottom: 2rem;
+}
+.cartaz h2{
+    text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
+    margin: 1rem;
 }
 
 .cartaz img {
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
     width: 16rem;
     height: 25rem;
@@ -16,40 +38,75 @@
 }
 
 .Avaliacao{
-    margin-left: 23rem;
-    margin-right: 23rem;
-    width: auto;
-    height: auto;
-    display: flex;
-    justify-content: space-around;
-}
-.Avaliacao img{
-    border-radius: 5px;
+    justify-self: center;
     width: 10rem;
-    max-width: none;
+    height: 10rem;
+    display: flex;
+    justify-content: center;
+}
+.Avaliacao h3{
+    font-size: 6rem;
+    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
 }
 .Sinopse{
-    margin: 1rem;
-    text-align: center;
-    width: 90rem;
+    box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, 0.3);
+    margin-top: 10rem;
+    margin-right: 2rem;
+    border-radius: 15px;
+    margin-left: 2rem;
+    text-align: justify;
+    width: 100%;
     height: 20rem;
     
 }
 .Sinopse p {
-    height: 80%;
+    padding-top: 2rem;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    padding-bottom: 2rem;
+    width: 100%;
+    height: auto;
+    font-family: fangsong;
+    color: #bdbdbd;
     border-radius: 15px;
     font-size:x-large;
-    background-color: dimgray;
+    background-color: rgb(54, 54, 54);
+}
+.Sinopse h2{
+    margin: 1rem;
+    text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
 }
 
 .trailer{
+    background-color: rgb(95, 95, 95);
     height: auto;
+    margin-top: 3rem;
     width: auto;
     display: flex;
+    border-radius: 25px;
     flex-direction: column;
     align-items: center;
 }
+.trailer h1{
+    border-radius: 20px;
+    padding-top: 1rem;
+    text-align: center;
+    height: 4rem;
+    width: 100%;
+    text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+    background-color: rgb(60, 60, 60);
+}
 iframe{
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
+    border-radius: 15px;
+    background-color:rgb(71, 71, 71) ;
+    padding: 3rem;
     height: 30rem;
     width: 53rem;
+}
+
+.dados{
+    display: flex;
+
 }
