--- a/front/src/style/Login.css
+++ b/front/src/style/Login.css
@@ -1,27 +1,39 @@
 img{
-    width: 7rem;
-    max-height: none;
-    max-width: none;
-  }
-  
-  form{
-    margin-top: 14rem;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  width: 7rem;
+  max-height: none;
+  max-width: none;
   }
 
-  button{
-    margin-top: 2rem;
-  }
+form{
+  background-color: rgb(40, 39, 39);
+  width: 100%;
+  height: 100%;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
-  label{
-    margin-top: 0.8rem;
-  }
+fieldset{
+  border-radius: 15px;
+  margin-top: 12rem;
+  width: 25%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+}
+
+button{
+ margin-top: 2rem;
+}
+
+label{
+  margin-top: 0.8rem;
+}
   
   input{
     width: 18rem;
-  }
+}
